@@ -8,6 +8,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -34,14 +35,20 @@ public class CompanyPscServiceImpl implements CompanyPscService {
 
     private static final Logger LOG = LoggerFactory.getLogger(String.valueOf(CompanyPscServiceImpl.class));
 
-    static final String[] NATURES_OF_CONTROL = {"ownership-of-shares-25-to-50-percent",
+    static final String[] NATURES_OF_CONTROL_SHARES = {"ownership-of-shares-25-to-50-percent",
             "ownership-of-shares-50-to-75-percent",
             "ownership-of-shares-75-to-100-percent",
             "ownership-of-shares-25-to-50-percent-as-trust",
             "ownership-of-shares-50-to-75-percent-as-trust"};
+    static final String[] NATURES_OF_CONTROL_VOTING_RIGHTS = {"voting-rights-25-to-50-percent",
+            "voting-rights-50-to-75-percent",
+            "voting-rights-75-to-100-percent",};
+    static final String[] NATURES_OF_CONTROL_RIGHT_TO_APPOINT = {"right-to-appoint-and-remove-directors",
+            "right-to-appoint-and-remove-directors-as-trust",
+            "right-to-appoint-and-remove-directors-as-firm",};
     private static final int ID_LENGTH = 10;
     private static final int SALT_LENGTH = 8;
-    public static final String NATIONALITY = "BRITISH";
+    public static final String NATIONALITY = "British";
     public static final String REGISTRATION_NUMBER = "12345678";
     public static final String LEGAL_FORM = "Legal Form";
     public static final String LEGAL_AUTHORITY = "Legal Authority";
@@ -51,10 +58,19 @@ public class CompanyPscServiceImpl implements CompanyPscService {
     public static final String TITLE = "Dr.";
     public static final String FIRST_NAME = "First";
     public static final String LAST_NAME = "Last";
-    private static final int DEFAULT_NUMBER_OF_PSC = 0;
+    private static final int DEFAULT_NUMBER_OF_PSC = 1;
     private static final String PSC_ERROR_MESSAGE = "psc_type must be accompanied by number_of_psc";
     private static final String BENEFICIAL_OWNER_ERROR =
             "Beneficial owner type is not allowed for this company type";
+
+    private static final Set<CompanyType> EXCLUDED_COMPANY_TYPES = Set.of(
+            CompanyType.CHARITABLE_INCORPORATED_ORGANISATION,
+            CompanyType.EEIG,
+            CompanyType.EEIG_ESTABLISHMENT,
+            CompanyType.FURTHER_EDUCATION_OR_SIXTH_FORM_COLLEGE_CORPORATION,
+            CompanyType.OVERSEA_COMPANY,
+            CompanyType.SCOTTISH_CHARITABLE_INCORPORATED_ORGANISATION
+    );
 
     private final RandomService randomService;
     private final CompanyPscsRepository repository;
@@ -73,8 +89,15 @@ public class CompanyPscServiceImpl implements CompanyPscService {
     public List<CompanyPscs> create(CompanyRequest spec) throws DataException {
         LOG.info("Starting creation of PSCs for company number: " + spec.getCompanyNumber());
 
-        if (shouldReturnNullForOverseaCompany(spec)) {
-            LOG.info("Company type is OVERSEA_COMPANY. No PSCs will be created.");
+        if (CompanyType.REGISTERED_OVERSEAS_ENTITY.equals(spec.getCompanyType()) &&
+            (spec.getPscType() == null || spec.getPscType().isEmpty() ||
+             spec.getPscType().stream().anyMatch(type -> type == PscType.INDIVIDUAL))) {
+             spec.setPscType(List.of(PscType.INDIVIDUAL_BENEFICIAL_OWNER));
+        }
+
+        if (shouldReturnNullForCompaniesThatDoNotNeedPscs(spec)) {
+            LOG.info("Company type does not require a PSC. No PSCs will be created.");
+            spec.setNumberOfPscs(0);
             return null;
         }
 
@@ -97,9 +120,12 @@ public class CompanyPscServiceImpl implements CompanyPscService {
         return createPscsBasedOnCompanyType(spec, numberOfPsc);
     }
 
-    private boolean shouldReturnNullForOverseaCompany(CompanyRequest spec) {
-        boolean result = CompanyType.OVERSEA_COMPANY.equals(spec.getCompanyType());
-        LOG.debug("shouldReturnNullForOverseaCompany: " + result);
+    private boolean shouldReturnNullForCompaniesThatDoNotNeedPscs(CompanyRequest spec) {
+        if (spec == null || spec.getCompanyType() == null) {
+            return false;
+        }
+        boolean result = EXCLUDED_COMPANY_TYPES.contains(spec.getCompanyType());
+        LOG.debug("shouldReturnNullForExcludedCompanies: " + result);
         return result;
     }
 
@@ -182,11 +208,12 @@ public class CompanyPscServiceImpl implements CompanyPscService {
     }
 
     private PscType getBeneficialOwnerType(List<PscType> requestedPscTypes, int index) {
+        // If PSC types are provided, cycle through them
         if (requestedPscTypes != null && !requestedPscTypes.isEmpty()) {
             return requestedPscTypes.get(index % requestedPscTypes.size());
         }
-        return index % 2 == 0 ? PscType.INDIVIDUAL_BENEFICIAL_OWNER
-                : PscType.CORPORATE_BENEFICIAL_OWNER;
+        // Default to INDIVIDUAL_BENEFICIAL_OWNER for registered overseas entities
+        return PscType.INDIVIDUAL_BENEFICIAL_OWNER;
     }
 
     private PscType getRegularPscType(List<PscType> requestedPscTypes, int index) {
@@ -259,12 +286,27 @@ public class CompanyPscServiceImpl implements CompanyPscService {
         return LocalDate.now().atStartOfDay(ZoneId.of("UTC")).toInstant();
     }
 
+    /**
+     * Sets the natures of control for a given CompanyPscs object.
+     * This method selects one random nature of control from each of the predefined categories:
+     * ownership of shares, voting rights, and the right to appoint and remove directors
+     * The selected values are then assigned to the CompanyPscs object.
+     *
+     * @param companyPsc the CompanyPscs object to which the natures of control will be assigned
+     */
     private void setNaturesOfControl(CompanyPscs companyPsc) {
-        List<String> nocList = Arrays.asList(NATURES_OF_CONTROL);
-        Collections.shuffle(nocList);
-        long num = randomService.getNumberInRange(0, NATURES_OF_CONTROL.length).orElse(0);
-        companyPsc.setNaturesOfControl(new ArrayList<>(nocList.subList(0, (int) num + 1)));
+        List<String> sharesList = new ArrayList<>(Arrays.asList(NATURES_OF_CONTROL_SHARES));
+        List<String> votingRightsList = new ArrayList<>(Arrays.asList(NATURES_OF_CONTROL_VOTING_RIGHTS));
+        List<String> rightToAppointList = new ArrayList<>(Arrays.asList(NATURES_OF_CONTROL_RIGHT_TO_APPOINT));
+        Collections.shuffle(sharesList);
+        Collections.shuffle(votingRightsList);
+        Collections.shuffle(rightToAppointList);
+        String randomShares = sharesList.get(0);
+        String randomVotingRights = votingRightsList.get(0);
+        String randomRightToAppoint = rightToAppointList.get(0);
+        companyPsc.setNaturesOfControl(List.of(randomShares, randomVotingRights, randomRightToAppoint));
     }
+
 
     private void buildSuperSecureBeneficialOwner(CompanyPscs companyPscs) {
         companyPscs.setKind(PscType.SUPER_SECURE_BENEFICIAL_OWNER.getKind());
@@ -431,3 +473,4 @@ public class CompanyPscServiceImpl implements CompanyPscService {
         }
     }
 }
+
